--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,9 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:hint="@string/username_title"
-         />
+        android:hint="@string/username_title" />
 
     <Button
         android:id="@+id/btnGoCollage"
