--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,3 +1,4 @@
 <resources>
-<dimen name="activity_margin">10dp</dimen>    
+    <dimen name="activity_margin">10dp</dimen>
+    <dimen name="bottom_margin">100dp</dimen>
 </resources>
