Добавлено отображения лайков

--- a/res/layout/picture_item.xml
+++ b/res/layout/picture_item.xml
@@ -14,5 +14,15 @@
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
          />
+	<TextView
+        android:id="@+id/textviewLikes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:layout_alignParentRight="true" 
+        android:textColor="@android:color/white"
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:text="" />
     
 </RelativeLayout>
